# machine_learning_data_talks_club_homework

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
01-intro/: FirstNotebook.ipynb
02-regression/: hw_regression.ipynb
03-classification/: classification_hw.ipynb
04-evaluation/: homework.ipynb
05-deployment/: serve_model.py  test_api.py  test_docker.py  test_prediction.py
06-trees/: working_hw.ipynb
